[gd_scene load_steps=7 format=3 uid="uid://jw38kplxrumc"]

[ext_resource type="VideoStream" uid="uid://bvfbfktps4xrj" path="res://base de donné image/video random/0626.ogv" id="1_iihua"]
[ext_resource type="Script" uid="uid://b2k5u3f1acn1r" path="res://Menu Principal/menu_principal.gd" id="1_xbuub"]
[ext_resource type="Texture2D" uid="uid://c7ar4x4tkgurf" path="res://base de donné image/video random/test.png" id="2_avouw"]
[ext_resource type="FontFile" uid="uid://cq8fch0f4cr5d" path="res://base de donné image/Fonts/Kenney Blocks.ttf" id="3_uqf63"]
[ext_resource type="FontFile" uid="uid://tieccn0jv3pd" path="res://base de donné image/Fonts/Kenney Future Narrow.ttf" id="5_b00oi"]

[sub_resource type="LabelSettings" id="LabelSettings_xbuub"]
font = ExtResource("3_uqf63")
font_size = 101
font_color = Color(0.29219, 0.29219, 0.29219, 1)

[node name="Menu Principal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xbuub")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1588.0
offset_bottom = 792.0
scale = Vector2(0.815, 0.815)
texture = ExtResource("2_avouw")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 2058.0
offset_bottom = 1080.0
scale = Vector2(0.595, 0.595)
stream = ExtResource("1_iihua")
autoplay = true
loop = true

[node name="Chose your level" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -199.0
offset_top = -275.0
offset_right = 1305.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.285, 0.285)
theme_override_fonts/font = ExtResource("3_uqf63")
theme_override_font_sizes/font_size = 136
text = "Chose your level"

[node name="Main Menu" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -170.0
offset_right = 341.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"
label_settings = SubResource("LabelSettings_xbuub")
horizontal_alignment = 1

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("5_b00oi")
theme_override_font_sizes/font_size = 64
text = "Back"

[node name="Level 1" type="Button" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 190.0
offset_right = 370.0
offset_bottom = 294.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("3_uqf63")
theme_override_font_sizes/font_size = 64
text = "Level 1"

[node name="VBoxContainer" type="VBoxContainer" parent="Level 1"]
layout_mode = 0
offset_left = 340.0
offset_top = -96.0
offset_right = 748.0
offset_bottom = 224.0

[node name="Level 1-1" type="Button" parent="Level 1/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqf63")
theme_override_font_sizes/font_size = 64
text = "Level 1-1"

[node name="Level 1-2" type="Button" parent="Level 1/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqf63")
theme_override_font_sizes/font_size = 64
text = "Level 1-2"

[node name="Level 1-3" type="Button" parent="Level 1/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqf63")
theme_override_font_sizes/font_size = 64
text = "Level 1-3"

[connection signal="pressed" from="Chose your level" to="." method="_on_chose_your_level_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level 1/VBoxContainer/Level 1-1" to="." method="_on_level_11_pressed"]
